# frezze

./: .env.example  .gitignore  BRANCH_FREEZE_IMPLEMENTATION.md  CNAME  Cargo.toml  Makefile  PERMISSIONS.md  README.md  ROADMAP.md  docker-compose.yml  permissions.example.yaml  users.yaml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  infrastructure.yml  package_update.yml  security.yml
.github/workflows/: docs.yaml  publish.yaml
.sqlx/: query-0383669ec884bb4819d1c870c35a864aa7f791d3f525ecdd1a4b8d824c41b9c7.json  query-0e8b9849df34bd95bc2692f5e293dfae612816f92cc119f7c5076dff7149edbc.json  query-1da775e8f4dc3a8a53ed951e8da9d7b7964d13b45fa5e5ca9136a3327336fb1f.json  query-215094e331d1a07b70ee338869ce89d44ff6e91c722e663dac92f135c74d0e61.json  query-2e09feab6dea239f32546f0c808cc919f131ef11880293e9659748bab7f7d7a4.json  query-2f6741d12a2040d66b17b01e8cbb9122190d53ed8b1d1a7fe3fdc4ddab711b26.json  query-40ecb12e456663f44bc090e33d560813dd817b509173029c7da26821de8e0917.json  query-4c1e1c18c1f2ad82c52216ec94184fea1ac5deb8eda53decfa16f6bbc200e791.json  query-4f9f03f5edf9070adcbb2e89237406e76cbf6841bff17c3d0297a8fd590a48d6.json  query-589557792867d9c2564428b73f208945de95530d83e72f944f9452fe5a2ac287.json  query-6667bcd8ab87c7fba73fa00b5bbe18b98019dca17294ebea5a0237e0189ffca7.json  query-6fb2e94bd35134f43599193ee2639c5665b04883d76f050484677d855687a00b.json  query-80b4fb0b8da3546ff2f753651aaff7546aac064c6efa32f2321fb9960428c530.json  query-89a5052625f5b90be2a54ae637d121dc2e13ac8664bf0ca747315da3c82ec2f3.json  query-89c591636c044b3dd7d226291734721be4e1f02ee37f930b33f7a9b9c69033bd.json  query-94ff5d0cafea4ff1fca6f3d4ff4da8faa708a179a2c9655214956cd91c79daeb.json  query-a0ee45683cebcdd5f89a6ff8762567647eba36b2bd8ff9095ac3befcc198c319.json  query-a6c0644948799e3afcec943ec492d4c7b7746c5e2f8167ec0000e36bb6193f48.json  query-b606ccaf7c818f99ec80de95d41b320b4f280ab4f9f427be59fc262db230c05b.json  query-cda830d79b401caf12e9236402a5482648a88fffee8d261585376d5b5660d6e6.json  query-d92ed0d6301beb677c1260e89407b09c309d0e5e5ec1f88a61c7065d792f33fc.json  query-da92e3d8664229f92d493236209d0716b496b54e7d00fe718b706314508832e3.json  query-ed5ed6af97978a14a3153d3e125aef3172f4468bfd7f707137b9c305d8e00689.json
deploy/docker/: Dockerfile
libs/database/: Cargo.toml
libs/database/src/: freeze.rs
libs/server/: Cargo.toml
libs/server/src/: config.rs  lib.rs
libs/server/src/handlers/: helpers.rs  pr.rs
libs/server/src/middlewares/: mod.rs
migrations/: 20250708142135_init.sql  20250923123956_unlocked_prs.sql  20251009132240_add_branch_to_freeze.sql
src/: config.rs  main.rs  permissions.rs  repository.rs  worker.rs
(+40 files in other folders)
