[package]
name = "frezze"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["tracing"] }
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "env"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
octocrab = "0.44.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["json", "postgres", "chrono", "uuid", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
