[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "json",
  "postgres",
  "chrono",
  "uuid",
  "runtime-tokio",
] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
